On startup, remove feed entries with empty URL on startup

This should never happen, but occasionally did when something went wrong
while adding a new feed, e.g. a crash.  This would then cause a segfault
on startup.

BUG: 495961